Added responsive home page views for small, medium, and large mobile devices

--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
                     <li>About </li>
                     <li>Other </li>
                     <li>Archives </li>
-                    <li>Subscribe </li>
+                    <li><button type ="button"> Subscribe </button> </li>
                 </ul>
             </nav>
 
         <main>
             <div class="box"> 
-                <a href="blog.html"> 
+                <a href="danny-blog-page-2019.html"> 
                     <img class="blog-image" id="sport-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319615.svg"/>  
                 </a>
                 <figcaption>Sports</figcaption>  
             </div>
 
                     <div class="box"> 
-                        <a href="blog.html"> 
+                        <a href="danny-blog-page-2019.html"> 
                                 <img class="blog-image" id="food-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319481.svg"/>
                         </a>
                         <figcaption> Food</figcaption>
                     </div>
 
                         <div class="box">
-                            <a href="blog.html"> 
+                            <a href="danny-blog-page-2019.html"> 
                                 <img class="blog-image" id="health-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319405.svg"/>
                             </a>
                             <figcaption> Health </figcaption>
                         </div>
 
                         <div class="box">
-                            <a href="blog.html"> 
+                            <a href="danny-blog-page-2019.html"> 
                                 <img class="blog-image" id="fashion-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319522.svg"/>
                             </a>
                             <figcaption> Fashion </figcaption>
