Formatted HTML and CSS

--- a/danny-blog-page-2019.html
+++ b/danny-blog-page-2019.html
@@ -18,7 +18,7 @@
 
             <nav>
                 <ul>
-                    <li>About </li>
+                    <a href="index.html"><li>Home </li> </a>
                     <li>Other </li>
                     <li>Archives </li>
                     <li><button type ="button"> Subscribe </button> </li>
@@ -61,12 +61,11 @@
             </content>
 
             <footer>
-                    <ul>
-                        <li>Help</li>
-                        <li>Report a Bug</li>
-                        <li>Contact</li>
-                    </ul>
-                   
+                <ul>
+                    <li>Help</li>
+                    <li>Report a Bug</li>
+                    <li>Contact</li>
+                </ul>  
             </footer>
 
         </div>    
