--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
     <body>
         <div class="container">
+
             <header>
                 <h1> Danny's Blog</h1>
             </header>
 
             <nav>
                 <ul>
-                    <li>About </li>
+                    <a href="index.html"><li>Home </li> </a>
                     <li>Other </li>
                     <li>Archives </li>
                     <li><button type ="button"> Subscribe </button> </li>
@@ -25,6 +26,7 @@
             </nav>
 
         <main>
+
             <div class="box"> 
                 <a href="danny-blog-page-2019.html"> 
                     <img class="blog-image" id="sport-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319615.svg"/>  
@@ -32,40 +34,40 @@
                 <figcaption>Sports</figcaption>  
             </div>
 
-                    <div class="box"> 
-                        <a href="danny-blog-page-2019.html"> 
-                                <img class="blog-image" id="food-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319481.svg"/>
-                        </a>
-                        <figcaption> Food</figcaption>
-                    </div>
+            <div class="box"> 
+                <a href="danny-blog-page-2019.html"> 
+                    <img class="blog-image" id="food-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319481.svg"/>
+                </a>
+                    <figcaption> Food</figcaption>
+            </div>
 
-                        <div class="box">
-                            <a href="danny-blog-page-2019.html"> 
-                                <img class="blog-image" id="health-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319405.svg"/>
-                            </a>
-                            <figcaption> Health </figcaption>
-                        </div>
+            <div class="box">
+                <a href="danny-blog-page-2019.html"> 
+                    <img class="blog-image" id="health-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319405.svg"/>
+                </a>
+                <figcaption> Health </figcaption>
+            </div>
 
-                        <div class="box">
-                            <a href="danny-blog-page-2019.html"> 
-                                <img class="blog-image" id="fashion-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319522.svg"/>
-                            </a>
-                            <figcaption> Fashion </figcaption>
-                        </div>
+            <div class="box">
+                <a href="danny-blog-page-2019.html">
+                    <img class="blog-image" id="fashion-image" src="https://www.flaticon.com/premium-icon/icons/svg/2319/2319522.svg" />
+                </a>
+                <figcaption> Fashion </figcaption>
+            </div>
 
-            </main>
+        </main>
 
-            <footer>
-                <ul>
-                    <li>Help</li>
-                    <li>Report a Bug</li>
-                    <li>Contact</li>
-                </ul>
+        <footer>
+            <ul>
+                <li>Help</li>
+                <li>Report a Bug</li>
+                <li>Contact</li>
+            </ul>
                
-            </footer>
-
+         </footer>
 
         </div>
+        
     </body>
 
 </html>
