--- a/danny-blog-page-2019.html
+++ b/danny-blog-page-2019.html
@@ -4,8 +4,11 @@
     <head>
         <meta charset = "UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Danny's Blog Home Page</title>
+        <title>Blog and Info</title>
         <link rel="stylesheet" type="text/css" href="danny-blog-2019.css"/>
+        <link rel="stylesheet" type="text/css" href="danny-blog-udacity-2019/blog-css/header.css"/>
+        <link rel="stylesheet" type="text/css" href="danny-blog-udacity-2019/blog-css/footer.css"/>
+        <link rel="stylesheet" type="text/css" href="danny-blog-udacity-2019/blog-css/nav.css"/>
         <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
