--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <head>
         <meta charset = "UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Danny's Blog Home Page</title>
-        <link rel="stylesheet" type="text/css" href="main.css"/>
+        <title>Danny's Home1</title>
+        <link rel="stylesheet" type="text/css" href="danny-blog-udacity-2019/blog-css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="danny-blog-2019.css"/>
+        <link rel="stylesheet" type="text/css" href="danny-blog-udacity-2019/blog-css/header.css"/>
+        <link rel="stylesheet" type="text/css" href="danny-blog-udacity-2019/blog-css/footer.css"/>
+        <link rel="stylesheet" type="text/css" href="danny-blog-udacity-2019/blog-css/nav.css"/>
         <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+
+        
     </head>
 
     <body>
         <div class="container">
 
             <header>
-                <h1> Danny's Blog</h1>
+                <h1> Danny's Blog1</h1>
             </header>
 
             <nav>
